Changed to use microbamba

--- a/demucs_finetune_colab.ipynb
+++ b/demucs_finetune_colab.ipynb
@@ -3,50 +3,76 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "658aa47d",
+   "id": "3bd4f26f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')"
+    "!curl -Ls https://micro.mamba.pm/api/micromamba/linux-64/latest | tar -xvj bin/micromamba\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc0b7ec2",
+   "id": "00c9ec17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!./bin/micromamba create -y -n demucs310 python=3.10\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "053ab8ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "prefix = \"/usr/local/envs/demucs310\"\n",
+    "os.environ[\"MAMBA_ROOT_PREFIX\"] = \"/usr/local\"\n",
+    "os.environ[\"CONDA_PREFIX\"] = prefix\n",
+    "os.environ[\"PATH\"] = f\"{prefix}/bin:\" + os.environ[\"PATH\"]\n",
+    "!./bin/micromamba activate demucs310\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2fb08707",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!micromamba install -y -n demucs310 -c pytorch -c conda-forge \\\n",
+    "    pytorch=1.13.1 torchaudio=0.13.1 numpy dora hydra-core einops julius lameenc museval submitit soundfile\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e7b7ec9",
    "metadata": {},
    "outputs": [],
    "source": [
     "!git clone https://github.com/MaxiReggi/mydemucs.git\n",
-    "%cd mydemucs"
+    "%cd mydemucs\n",
+    "!pip install -e .\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "999f8209",
+   "id": "2febe1fb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install torch==1.13.1 torchaudio==0.13.1 --extra-index-url https://download.pytorch.org/whl/cpu"
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "146524a3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install -e .\n",
-    "!pip install dora-search hydra-core einops julius lameenc museval submitit soundfile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d2d9816a",
+   "id": "adb2b227",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +83,7 @@
     "  dset.valid=/content/drive/MyDrive/my_finetune_dataset \\\n",
     "  batch_size=1 \\\n",
     "  segment=5 \\\n",
-    "  train_valid=true"
+    "  train_valid=true\n"
    ]
   }
  ],
