Changed to use microbamba v2

--- a/demucs_finetune_colab.ipynb
+++ b/demucs_finetune_colab.ipynb
@@ -3,53 +3,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bd4f26f",
+   "id": "ff552d61",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!curl -Ls https://micro.mamba.pm/api/micromamba/linux-64/latest | tar -xvj bin/micromamba\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "00c9ec17",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!./bin/micromamba create -y -n demucs310 python=3.10\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "053ab8ec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "!mkdir -p /root/micromamba\n",
+    "!curl -Ls https://micro.mamba.pm/api/micromamba/linux-64/latest | tar -xvj -C /root/micromamba bin/micromamba\n",
+    "\n",
+    "# Agregar micromamba al PATH para usar en esta notebook\n",
     "import os\n",
-    "prefix = \"/usr/local/envs/demucs310\"\n",
-    "os.environ[\"MAMBA_ROOT_PREFIX\"] = \"/usr/local\"\n",
-    "os.environ[\"CONDA_PREFIX\"] = prefix\n",
-    "os.environ[\"PATH\"] = f\"{prefix}/bin:\" + os.environ[\"PATH\"]\n",
-    "!./bin/micromamba activate demucs310\n"
+    "os.environ[\"MAMBA_ROOT_PREFIX\"] = \"/root/micromamba\"\n",
+    "os.environ[\"PATH\"] = \"/root/micromamba/bin:\" + os.environ[\"PATH\"]\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fb08707",
+   "id": "5e30226a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!micromamba create -y -n demucs310 python=3.10\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4164bb5d",
    "metadata": {},
    "outputs": [],
    "source": [
     "!micromamba install -y -n demucs310 -c pytorch -c conda-forge \\\n",
-    "    pytorch=1.13.1 torchaudio=0.13.1 numpy dora hydra-core einops julius lameenc museval submitit soundfile\n"
+    "    pytorch=1.13.1 torchaudio=0.13.1 numpy dora-search hydra-core einops julius lameenc museval submitit soundfile\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e7b7ec9",
+   "id": "bbef1aed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2febe1fb",
+   "id": "12cd493e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,11 +63,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adb2b227",
+   "id": "678addc1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!dora run -f 955717e8 \\\n",
+    "!micromamba run -n demucs310 -- dora run -f 955717e8 \\\n",
     "  continue_from=955717e8 \\\n",
     "  dset.name=my_shawntracks \\\n",
     "  dset.train=/content/drive/MyDrive/my_finetune_dataset \\\n",
