Changed to version 3

--- a/demucs_finetune_colab.ipynb
+++ b/demucs_finetune_colab.ipynb
@@ -3,14 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff552d61",
+   "id": "5f3a023d",
    "metadata": {},
    "outputs": [],
    "source": [
     "!mkdir -p /root/micromamba\n",
     "!curl -Ls https://micro.mamba.pm/api/micromamba/linux-64/latest | tar -xvj -C /root/micromamba bin/micromamba\n",
     "\n",
-    "# Agregar micromamba al PATH para usar en esta notebook\n",
+    "# Agregar micromamba al PATH\n",
     "import os\n",
     "os.environ[\"MAMBA_ROOT_PREFIX\"] = \"/root/micromamba\"\n",
     "os.environ[\"PATH\"] = \"/root/micromamba/bin:\" + os.environ[\"PATH\"]\n"
@@ -19,40 +19,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e30226a",
+   "id": "4468114d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!micromamba create -y -n demucs310 python=3.10\n"
+    "!micromamba create -y -n demucs310 -c conda-forge -c pytorch \\\n",
+    "    python=3.10 \\\n",
+    "    pytorch=1.13.1 \\\n",
+    "    torchaudio=0.13.1 \\\n",
+    "    numpy \\\n",
+    "    hydra-core\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4164bb5d",
+   "id": "2c513b39",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!micromamba install -y -n demucs310 -c pytorch -c conda-forge \\\n",
-    "    pytorch=1.13.1 torchaudio=0.13.1 numpy dora-search hydra-core einops julius lameenc museval submitit soundfile\n"
+    "!micromamba run -n demucs310 -- /bin/sh -c 'pip install dora-search einops julius lameenc museval submitit soundfile'\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbef1aed",
+   "id": "ce13e6d6",
    "metadata": {},
    "outputs": [],
    "source": [
     "!git clone https://github.com/MaxiReggi/mydemucs.git\n",
     "%cd mydemucs\n",
-    "!pip install -e .\n"
+    "!micromamba run -n demucs310 -- pip install -e .\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12cd493e",
+   "id": "5e87cce0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "678addc1",
+   "id": "ed681f66",
    "metadata": {},
    "outputs": [],
    "source": [
