--- a/demucs_finetune_colab.ipynb
+++ b/demucs_finetune_colab.ipynb
@@ -23,8 +23,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!micromamba create -y -n demucs310 -c conda-forge -c pytorch \\\n",
-    "    python=3.10 \\\n",
+    "!micromamba create -y -n demucs309 -c conda-forge -c pytorch \\\n",
+    "    python=3.9 \\\n",
     "    pytorch=1.13.1 \\\n",
     "    torchaudio=0.13.1 \\\n",
     "    numpy \\\n",
@@ -38,7 +38,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!micromamba run -n demucs310 -- /bin/sh -c 'pip install dora-search einops julius lameenc museval submitit soundfile'\n"
+    "import subprocess
+    # Este comando instala los paquetes con pip dentro del entorno micromamba
+    subprocess.run(
+    [
+        "/root/micromamba/envs/demucs309/bin/pip",
+        "install",
+        "dora-search",
+        "einops",
+        "julius",
+        "lameenc",
+        "museval",
+        "submitit",
+        "soundfile"
+    ],
+    check=True
+    )   
+    "
    ]
   },
   {
@@ -48,9 +64,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git clone https://github.com/MaxiReggi/mydemucs.git\n",
-    "%cd mydemucs\n",
-    "!micromamba run -n demucs310 -- pip install -e .\n"
+    "!git clone https://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@github.com/MaxiReggi/mydemucs.git\n",
+    "%cd mydemucs\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed681f66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import subprocess
+    # Este comando instala los paquetes con pip dentro del entorno micromamba
+    subprocess.run(
+    [
+        "/root/micromamba/envs/demucs309/bin/pip",
+        "install",
+        "-r",
+        "requirements.txt" 
+    ],
+    check=True
+    )
+    "
    ]
   },
   {
