changed demucs environment name

--- a/demucs_finetune_colab.ipynb
+++ b/demucs_finetune_colab.ipynb
@@ -3,14 +3,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f3a023d",
+   "id": "ff552d61",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 1. Descargar y extraer micromamba correctamente\n",
     "!mkdir -p /root/micromamba\n",
     "!curl -Ls https://micro.mamba.pm/api/micromamba/linux-64/latest | tar -xvj -C /root/micromamba bin/micromamba\n",
     "\n",
-    "# Agregar micromamba al PATH\n",
+    "# Agregar micromamba al PATH para usar en esta notebook\n",
     "import os\n",
     "os.environ[\"MAMBA_ROOT_PREFIX\"] = \"/root/micromamba\"\n",
     "os.environ[\"PATH\"] = \"/root/micromamba/bin:\" + os.environ[\"PATH\"]\n"
@@ -19,83 +20,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4468114d",
+   "id": "5e30226a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!micromamba create -y -n demucs309 -c conda-forge -c pytorch \\\n",
-    "    python=3.9 \\\n",
-    "    pytorch=1.13.1 \\\n",
-    "    torchaudio=0.13.1 \\\n",
-    "    numpy \\\n",
-    "    hydra-core\n"
+    "# 2. Crear entorno Python 3.9 con micromamba\n",
+    "!micromamba create -y -n demucs39 python=3.9\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c513b39",
+   "id": "4164bb5d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import subprocess
-    # Este comando instala los paquetes con pip dentro del entorno micromamba
-    subprocess.run(
-    [
-        "/root/micromamba/envs/demucs309/bin/pip",
-        "install",
-        "dora-search",
-        "einops",
-        "julius",
-        "lameenc",
-        "museval",
-        "submitit",
-        "soundfile"
-    ],
-    check=True
-    )   
-    "
+    "# 3. Instalar dependencias en el entorno\n",
+    "!micromamba install -y -n demucs310 -c pytorch -c conda-forge \\\n",
+    "    pytorch=1.13.1 torchaudio=0.13.1 numpy hydra-core\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce13e6d6",
+   "id": "bbef1aed",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git clone https://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@github.com/MaxiReggi/mydemucs.git\n",
-    "%cd mydemucs\n"
+    "# 4. Clonar tu repo personalizado (ajustar si es privado)\n",
+    "!git clone https://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@github.com/MaxiReggi/mydemucs.git\n",
+    "%cd mydemucs\n",
+    "!pip install -e .\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed681f66",
+   "id": "12cd493e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import subprocess
-    # Este comando instala los paquetes con pip dentro del entorno micromamba
-    subprocess.run(
-    [
-        "/root/micromamba/envs/demucs309/bin/pip",
-        "install",
-        "-r",
-        "requirements.txt" 
-    ],
-    check=True
-    )
-    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5e87cce0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# 5. Montar Google Drive\n",
     "from google.colab import drive\n",
     "drive.mount('/content/drive')\n"
    ]
@@ -103,10 +68,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed681f66",
+   "id": "678addc1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 6. Ejecutar fine-tuning\n",
     "!micromamba run -n demucs310 -- dora run -f 955717e8 \\\n",
     "  continue_from=955717e8 \\\n",
     "  dset.name=my_shawntracks \\\n",
